objects/Account.object
<CustomObject>
    <fields>
        <fullName>Close_opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Opp_Name__c</fullName>
        <label>Max Opp Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_opp_amount__c</fullName>
        <label>Max opp amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_opp_lineitems__c</fullName>
        <label>Number of opp lineitems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>